crates/test-ui/ui/nsset_from_nsobject.stderr
error[E0277]: the trait bound `Root: mutability::MutabilityHashIsStable` is not satisfied
 --> ui/nsset_from_nsobject.rs
  |
  |     let _ = NSSet::from_vec(vec![NSObject::new()]);
  |             --------------- ^^^^^^^^^^^^^^^^^^^^^ the trait `mutability::MutabilityHashIsStable` is not implemented for `Root`, which is required by `NSObject: HasStableHash`
  |             |
  |             required by a bound introduced by this call
  |
  = help: the following other types implement trait `mutability::MutabilityHashIsStable`:
            Immutable
            Mutable
            ImmutableWithMutableSubclass<MS>
            MutableWithImmutableSuperclass<IS>
  = note: required for `NSObject` to implement `HasStableHash`
note: required by a bound in `set::<impl NSSet<T>>::from_vec`
 --> $WORKSPACE/crates/icrate/src/additions/Foundation/set.rs
  |
  |     pub fn from_vec(mut vec: Vec<Id<T>>) -> Id<Self>
  |            -------- required by a bound in this associated function
  |     where
  |         T: HasStableHash,
  |            ^^^^^^^^^^^^^ required by this bound in `set::<impl NSSet<T>>::from_vec`
